dundee-2017: Add performance and python slides

--- a/cpp-dundee-2017.tex
+++ b/cpp-dundee-2017.tex
@@ -118,6 +118,20 @@
 \end{frame}
 
 \begin{frame}[fragile]
+  \frametitle{Performance testing}
+
+  \begin{itemize}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Python API}
+
+  \begin{itemize}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
   \frametitle{Upcoming changes (0.4.x)}
 
   \begin{itemize}
