--- a/cpp-dundee-2017.tex
+++ b/cpp-dundee-2017.tex
@@ -190,6 +190,51 @@ plt.show()
 \end{frame}
 
 \begin{frame}[fragile]
+  \frametitle{Python API: external metadata}
+
+  \begin{columns}
+    \begin{column}{0.6\textwidth}
+      \centering
+      \begin{lstlisting}[language=Python,basicstyle=\tiny\ttfamily]
+import matplotlib.pyplot as plt
+import pandas as pd
+import datapackage
+import ome_files
+import ome_files.metadata as ofmd
+
+reader = ome_files.OMETIFFReader()
+reader.set_id("9I5TT808_F00000010.companion.ome")
+pixels = reader.open_array(0)
+plt.imshow(pixels, cmap="gray")
+plt.show()
+meta = ofmd.OMEXMLMetadata(reader.get_ome_xml())
+reader.close()
+cmso_annotations = [
+  _ for _ in meta.get_map_annotations()
+  if _.Namespace == "CMSO/dpkg"
+]
+ann = cmso_annotations[0]
+paths = ann.Value.get("FilePath")
+dp = datapackage.DataPackage(paths[0])
+res_map = dict((_.descriptor["name"], _.local_data_path) for _ in dp.resources)
+df = pd.read_csv(res_map["objects_table"])
+df = df[df["time index"] == 0]
+x, y = df["cell col"].values, df["cell row"].values
+plt.scatter(x=x, y=y, s=100, edgecolors='b', facecolors='none')
+plt.imshow(pixels, cmap="gray")
+plt.show()
+      \end{lstlisting}
+    \end{column}
+    \begin{column}{0.4\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{cpp-dundee-2017-figures/tracking.png}\\
+      \vspace{.5em}
+      \includegraphics[width=\textwidth]{cpp-dundee-2017-figures/overlay.png}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}[fragile]
   \frametitle{Upcoming changes (0.4.x)}
 
   \begin{itemize}
